assets/css/style.css
/* --------------------- Imports ----------- */
@import url('https://fonts.googleapis.com/css2?family=Lato&family=Staatliches&display=swap');
* {
    margin: 0;
    padding: 0;
}

/* --------------------- General ----------- */
body {
    font-family: 'Staatliches', cursive;
    background-color: rgb(15, 4, 32);
    height: 100vh;
}

h1 {
    color:#FFF;
    display: inline-block;
    font-family: 'Lato', sans-serif;
    margin-bottom: 5px;
}

header {
    background-color: rgb(30, 3, 51);
    height: 12%;
    text-align: center;
}

footer {
    height: 15%;
    width: 100%;
    text-align: center;
    background-color: #FFF;
    z-index: -100;
}

a {
    font-size: 360%;
    display: inline-block;
    width: 33%;
}

p {
    font-size: 130%;
    font-weight: 800;
    text-transform: capitalize;
    color: #FFF;
}

/* --------------------- Button ----------- */
.button {
    display: block;
    width: 30%;
    height: 100%;
    font-size: 170%;
    color: #FFF;
    background-color: #333;
    border: outset;
    border-color: #FFF(28, 3, 117);
    font-family: 'Staatliches', cursive;
    float: left; 
    cursor: pointer;
}

.purple {
    background-color: rgb(79, 8, 185) !important;
    color: white !important;
}

.red {
    background-color: rgb(255, 0, 0) !important;
}

.gray {
    background-color: rgb(59, 59, 59) !important;
    color: white !important;
}

.dark {
    color: #333;
}

.opacity {
    background-color: rgba(0, 0, 0, 0.3);
}

/* --------------------- targets ----------- */
.target {
    width: 50px;
    height: 50px;
    background-color: rgb(187, 25, 25);
    margin: 0;
    padding: 0;
}

.mobile-target {
    width: 35px !important;
    height: 35px !important;
}

#container {
    width: 100%;
    height: 100%;
    text-align: center;
    display: flex;
    justify-content: center;
}

#game-window {
    background-color: black;
    height: 100%;
    cursor: crosshair;
}

.game-wrapper {
    padding-bottom: 15vh;
}

#controls {
    background-color: rgb(15, 4, 32);
    width: 100%;
    height: 10%;
    text-align: center;
}

#start {
    float: left;
}

#stop {
    float: right;
}

#controls-text {
    display: inline-block;
}

/* --------------------- Media Queries ----------- */
@media screen and (max-width: 992px){
    header {
        height: 120px;
    }
}

